--- a/src/main/resources/templates/denied.html
+++ b/src/main/resources/templates/denied.html
@@ -4,16 +4,12 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head>
-    <title>Hello World!</title>
+    <title>Denied Page</title>
 </head>
 <body>
-<h1>Hello world!</h1>
-<p>This is Hello page. Can only view by Admin.</p>
+<h1>Access Denied!</h1>
 <p>
     Click <a th:href="@{/logout}">here</a> to logout.
-</p>
-<p>
-    Click <a th:href="@{/admin}">here</a> to admin page.
 </p>
 </body>
 </html>
