--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,11 +12,11 @@
 	<h2>Login Page</h2>
 	<form th:action="@{/login}" method="post">
 		<div>
-			<label> User Name : <input type="text" name="username" />
+			<label> Username : <input type="text" name="username" />
 			</label>
 		</div>
 		<div>
-			<label> Password: <input type="password" name="password" />
+			<label> Password  : <input type="password" name="password" />
 			</label>
 		</div>
 		<div>
