--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -6,6 +6,6 @@
 <body>
 <h2>Hello User</h2>
 <p> <a th:href="@{/logout}">logout</a></p>
-<p>Click <a th:href="@{/home}">here</a> go to home page.</p>
+<p>Click <a th:href="@{/hello}">here</a> go to home page.</p>
 </body>
 </html>
