--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -24,4 +24,13 @@
 		</div>
 	</form>
 </body>
+
+
+<script type="javascript">
+	var SHENME = {};
+
+	SHENME['username'] =
+			JSON.stringify(SHENME);
+</script>
+
 </html>
