--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,36 +1,46 @@
-
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:th="http://www.thymeleaf.org"
-	xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-<title>Spring Security Example</title>
+    <meta content="text/html;charset=UTF-8"/>
+    <title>LOGIN PAGE</title>
+<!--    <link rel="stylesheet" th:href="@{css/bootstrap.min.css}"/>-->
+    <style type="text/css">
+        body {
+            padding-top: 50px;
+        }
+        .starter-template {
+            padding: 40px 15px;
+            text-align: center;
+        }
+    </style>
 </head>
 <body>
-	<div th:if="${param.error}">Invalid username and password.</div>
-	<div th:if="${param.logout}">You have been logged out.</div>
-	<h2>Login Page</h2>
-	<form th:action="@{/login}" method="post">
-		<div>
-			<label> Username : <input type="text" name="username" />
-			</label>
-		</div>
-		<div>
-			<label> Password  : <input type="password" name="password" />
-			</label>
-		</div>
-		<div>
-			<input type="submit" value="Sign In" />
-		</div>
-	</form>
+
+<nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container">
+        <div class="navbar-header">
+            <p>Spring Security Demo</p>
+        </div>
+    </div>
+</nav>
+<div class="container">
+
+    <div class="starter-template">
+        <p th:if="${param.logout}" class="bg-warning">SUCCESSFULLY LOGOUT</p><!-- 1 -->
+        <p th:if="${param.error}" class="bg-danger">WRONG USERNAME OR PASSWORD</p> <!-- 2 -->
+        <h2>WELCOME</h2>
+        <form name="form" th:action="@{/login}" action="/login" method="POST"> <!-- 3 -->
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" class="form-control" name="username" value="" placeholder="username" />
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" name="password" placeholder="password" />
+            </div>
+            <input type="submit" id="login" value="LOGIN" class="btn btn-primary" />
+        </form>
+    </div>
+</div>
 </body>
-
-
-<script type="javascript">
-	var SHENME = {};
-
-	SHENME['username'] =
-			JSON.stringify(SHENME);
-</script>
-
 </html>
