--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,16 +3,8 @@
 <head>
     <meta content="text/html;charset=UTF-8"/>
     <title>LOGIN PAGE</title>
-<!--    <link rel="stylesheet" th:href="@{css/bootstrap.min.css}"/>-->
-    <style type="text/css">
-        body {
-            padding-top: 50px;
-        }
-        .starter-template {
-            padding: 40px 15px;
-            text-align: center;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" th:href="@{/styles/bootstrap.min.css}"/>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/home.css}"/>
 </head>
 <body>
 
